--- a/css/style.css
+++ b/css/style.css
@@ -37,53 +37,39 @@ body {
 }
 
 .popover-overlay {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .popover-container {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 90%;
   max-height: 90%;
 }
 
-.swiper-container {
-  width: 100%;
-  height: 100%;
+.popover-image-container {
+  position: relative;
 }
 
-.swiper-slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.popover-image {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.swiper-button-next,
-.swiper-button-prev {
+.popover-caption {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 50%;
-  z-index: 1;
-  cursor: pointer;
-}
-
-.swiper-button-next {
-  right: 10px;
-}
-
-.swiper-button-prev {
-  left: 10px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  color: black;
+  padding: 5px;
+  font-size: 15px;
+  text-align: center;
 }
