Minor changes to music player dimensions

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   src: url('../fonts/Allura-Regular.ttf') format('truetype');
 }
 
+/* Source: https://www.fontspace.com/lofty-goals-font-f76241 */
 @font-face {
   font-family: 'Lofty';
   src: url('../fonts/LoftygoalsRegular.otf') format('truetype');
