Updating background image

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background-image: url('https://i.ibb.co/0cWkQyv/heart-bg.png');
+  background-image: url('https://i.imgur.com/SRrn8C4.png');
   background-repeat: no-repeat;
   background-position: top center;
   background-attachment: local;
